    - autobutcher can be re-enabled again after being stopped.
    - stopped Dwarf Manipulator from unmasking vampires.
  Misc improvements:
    - fastdwarf: new mode using debug flags, and some internal consistency fixes.
    - added a small stand-alone utility for applying and removing binary patches.
    - removebadthoughts: add --dry-run option
    - superdwarf: work in adventure mode too
  New tweaks:
    - tweak military-training: speed up melee squad training up to 10x (normally 3-5x).
  New scripts:
    - binpatch: the same as the stand-alone binpatch.exe, but works at runtime.
    - region-pops: displays animal populations of the region and allows tweaking them.
    - lua: lua interpreter front-end converted to a script from a native command.
    - dfusion: misc scripts with a text based menu.
    - embark: lets you embark anywhere.
    - lever: list and pull fort levers from the dfhack console.
  New GUI scripts:
    - gui/guide-path: displays the cached path for minecart Guide orders.
    - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
    - gui/workflow: a front-end for the workflow plugin.
    - gui/assign-rack: works together with a binary patch to fix weapon racks.
    - gui/gm-editor: an universal editor for lots of dfhack things.
    - gui/companion-order: a adventure mode command interface for your companions.
  New binary patches:
    - armorstand-capacity
    - custom-reagent-size
    - deconstruct-heapfall
    - deconstruct-teleport
    - hospital-overstocking
    - training-ammo
    - weaponrack-unassign
  Workflow plugin:
    - properly considers minecarts assigned to routes busy.
    - code for deducing job outputs rewritten in lua for flexibility.
    - logic fix: collecting webs produces silk, and ungathered webs are not thread.
    - items assigned to squads are considered busy, even if not in inventory.
    - shearing and milking jobs are supported, but only with generic MILK or YARN outputs.